# wow-doesmyaltknowthat

./: .gitignore  .pkgmeta  DoesMyAltKnowThat.toc  config.lua  core.lua  item_spell_map.lua
.github/workflows/: package.yml
tools/: fetch.py  miner.py  pyproject.toml
