[tool.poetry]
name = "doesmyaltknowthat_tools"
version = "0.1.0"
description = "Datamining tools for DoesMyAltKnowThat"
authors = ["David Lynch <kemayo@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
beautifulsoup4 = "^4.9.1"
requests = "^2.24.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
